Update README.md
Added Carlos' `SBT_OPTS` to prevent:

`java.util.concurrent.ExecutionException: java.lang.OutOfMemoryError: GC overhead limit exceeded`